--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prisma": "^5.18.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-cropper": "^2.3.3",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.52.2",
     "react-image-file-resizer": "^0.4.8",
