--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@tiptap/pm": "^2.6.4",
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
+    "@types/js-cookie": "^3.0.6",
     "@uploadthing/react": "^6.7.2",
     "arctic": "^1.9.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "ky": "^1.7.0",
+    "js-cookie": "^3.0.5",
+    "ky": "^1.7.2",
     "lucia": "^3.2.0",
     "lucide-react": "^0.428.0",
     "next": "15.0.0-rc.0",
